about to get full list of dates we need data for

--- a/download_pv_timeseries.ipynb
+++ b/download_pv_timeseries.ipynb
@@ -1037,101 +1037,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "85 already downloaded\n",
+      "202 already downloaded\n",
       "                0           1\n",
-      "10156  2019-06-01  2019-07-01\n",
-      "11542  2019-06-01  2019-07-01\n",
-      "12290  2019-06-01  2019-06-29\n",
-      "12314  2019-06-01  2019-07-01\n",
-      "12384  2019-06-01  2019-07-01\n",
-      "12756  2019-06-01  2019-07-01\n",
-      "1364   2019-06-01  2019-07-01\n",
-      "13888  2019-06-01  2019-07-01\n",
-      "1556   2019-06-01  2019-07-02\n",
-      "16241  2019-06-01  2019-07-01\n",
-      "1646   2019-06-01  2019-07-01\n",
-      "1872   2019-06-01  2019-07-01\n",
-      "19504  2019-06-01  2019-07-01\n",
-      "2108   2019-06-01  2019-07-01\n",
-      "2155   2019-06-01  2019-07-01\n",
-      "2176   2019-06-01  2019-07-01\n",
-      "2280   2019-06-17  2019-07-01\n",
-      "22850  2019-06-01  2019-07-01\n",
-      "2290   2019-06-01  2019-07-01\n",
-      "24768  2019-06-01  2019-06-14\n",
-      "26297  2019-06-01  2019-06-01\n",
-      "2672   2019-06-01  2019-07-01\n",
-      "26965  2019-06-01  2019-07-01\n",
-      "2775   2019-06-01  2019-07-01\n",
-      "28016  2019-06-02  2019-07-01\n",
-      "2829   2019-06-01  2019-07-01\n",
-      "2998   2019-06-01  2019-07-02\n",
-      "31144  2019-06-01  2019-07-01\n",
-      "3286   2019-06-01  2019-07-01\n",
-      "3579   2019-06-01  2019-07-01\n",
+      "10003  2019-01-01  2019-07-01\n",
+      "10020  2019-01-01  2019-07-01\n",
+      "10033  2019-01-01  2019-07-01\n",
+      "10041  2019-01-01  2019-07-01\n",
+      "10156  2019-01-01  2019-07-01\n",
+      "10606  2019-01-31  2019-02-02\n",
+      "10903  2019-01-01  2019-02-23\n",
+      "11259  2019-01-01  2019-07-01\n",
+      "11542  2019-01-01  2019-07-01\n",
+      "11683  2019-01-01  2019-07-01\n",
+      "12290  2019-01-01  2019-06-29\n",
+      "12314  2019-01-01  2019-07-01\n",
+      "12322  2019-01-01  2019-07-01\n",
+      "12384  2019-01-01  2019-07-01\n",
+      "12485  2019-01-01  2019-07-01\n",
+      "12698  2019-01-01  2019-07-01\n",
+      "12756  2019-01-01  2019-07-01\n",
+      "12896  2019-01-01  2019-07-02\n",
+      "13044  2019-01-01  2019-07-01\n",
+      "13064  2019-01-01  2019-07-01\n",
+      "13152  2019-01-01  2019-07-01\n",
+      "1364   2019-01-01  2019-07-01\n",
+      "13656  2019-01-01  2019-07-01\n",
+      "13663  2019-01-01  2019-07-01\n",
+      "13859  2019-01-01  2019-07-01\n",
+      "13888  2019-01-01  2019-07-01\n",
+      "13917  2019-01-01  2019-07-01\n",
+      "1556   2019-01-01  2019-07-02\n",
+      "15999  2019-01-01  2019-07-01\n",
+      "16241  2019-01-01  2019-07-01\n",
       "...           ...         ...\n",
-      "5065   2019-06-01  2019-07-01\n",
-      "5116   2019-06-01  2019-06-16\n",
-      "5242   2019-06-01  2019-07-01\n",
-      "5364   2019-06-01  2019-07-01\n",
-      "5431   2019-06-01  2019-07-01\n",
-      "55005  2019-06-01  2019-07-01\n",
-      "5701   2019-06-01  2019-07-01\n",
-      "5729   2019-06-01  2019-07-01\n",
-      "5766   2019-06-01  2019-07-01\n",
-      "6005   2019-06-01  2019-07-01\n",
-      "6080   2019-06-01  2019-07-01\n",
-      "6111   2019-06-01  2019-07-01\n",
-      "6229   2019-06-01  2019-07-01\n",
-      "6236   2019-06-01  2019-07-02\n",
-      "6281   2019-06-01  2019-07-01\n",
-      "6341   2019-06-01  2019-07-01\n",
-      "6349   2019-06-01  2019-07-01\n",
-      "6633   2019-06-01  2019-07-01\n",
-      "6849   2019-06-01  2019-07-01\n",
-      "6854   2019-06-01  2019-07-01\n",
-      "7225   2019-06-01  2019-07-01\n",
-      "7788   2019-06-01  2019-07-01\n",
-      "7816   2019-06-01  2019-07-01\n",
-      "8224   2019-06-01  2019-07-02\n",
-      "8883   2019-06-01  2019-07-01\n",
-      "8893   2019-06-01  2019-07-01\n",
-      "8926   2019-06-01  2019-07-01\n",
-      "9570   2019-06-01  2019-07-01\n",
-      "973    2019-06-02  2019-07-01\n",
-      "9831   2019-06-01  2019-07-01\n",
+      "6410   2019-01-01  2019-07-01\n",
+      "6462   2019-01-01  2019-07-01\n",
+      "6633   2019-01-01  2019-07-01\n",
+      "6668   2019-01-01  2019-07-01\n",
+      "6731   2019-01-01  2019-07-01\n",
+      "68324  2019-06-16  2019-07-01\n",
+      "6849   2019-01-01  2019-07-01\n",
+      "6854   2019-01-01  2019-07-01\n",
+      "6964   2019-01-01  2019-07-01\n",
+      "6980   2019-01-01  2019-07-01\n",
+      "6986   2019-01-01  2019-07-01\n",
+      "7225   2019-01-01  2019-07-01\n",
+      "7300   2019-01-01  2019-07-01\n",
+      "7449   2019-01-01  2019-07-01\n",
+      "7784   2019-01-01  2019-07-01\n",
+      "7788   2019-01-01  2019-07-01\n",
+      "7797   2019-01-01  2019-07-01\n",
+      "7816   2019-01-01  2019-07-01\n",
+      "8224   2019-01-01  2019-07-02\n",
+      "8688   2019-01-01  2019-07-01\n",
+      "8800   2019-01-01  2019-07-01\n",
+      "8883   2019-01-01  2019-07-01\n",
+      "8893   2019-01-01  2019-07-01\n",
+      "8921   2019-01-01  2019-07-02\n",
+      "8926   2019-01-01  2019-07-01\n",
+      "9464   2019-01-21  2019-07-01\n",
+      "9570   2019-01-01  2019-07-01\n",
+      "973    2019-01-01  2019-07-01\n",
+      "9807   2019-01-01  2019-07-01\n",
+      "9831   2019-01-01  2019-07-01\n",
       "\n",
-      "[85 rows x 2 columns]\n",
-      "Number of missing dates found so far: 883\n",
-      " system_id 0 of 829: 26965  Rate limit exceeded!  Waiting 1118 seconds.  Will retry at 2019-07-24 08:03:00.\n",
-      "Retries remaining = 5\n",
-      " system_id 1 of 829: 11542  Rate limit exceeded!  Waiting 3403 seconds.  Will retry at 2019-07-24 09:03:00.\n",
-      "Retries remaining = 5\n",
-      " system_id 3 of 829: 5701  Rate limit exceeded!  Waiting 3409 seconds.  Will retry at 2019-07-24 10:03:00.\n",
-      "Retries remaining = 5\n",
-      " system_id 5 of 829: 7225  Rate limit exceeded!  Waiting 3403 seconds.  Will retry at 2019-07-24 11:03:00.\n",
-      "Retries remaining = 5\n",
-      " system_id 7 of 829: 4771  Rate limit exceeded!  Waiting 3406 seconds.  Will retry at 2019-07-24 12:03:00.\n",
-      "Retries remaining = 5\n",
-      " system_id 9 of 829: 1872  Rate limit exceeded!  Waiting 3405 seconds.  Will retry at 2019-07-24 13:03:00.\n",
-      "Retries remaining = 5\n",
-      " system_id 11 of 829: 19504  Rate limit exceeded!  Waiting 3402 seconds.  Will retry at 2019-07-24 14:03:00.\n",
-      "Retries remaining = 5\n",
-      " system_id 13 of 829: 4126  Rate limit exceeded!  Waiting 3402 seconds.  Will retry at 2019-07-24 15:03:00.\n",
-      "Retries remaining = 5\n",
-      " system_id 15 of 829: 22850  Rate limit exceeded!  Waiting 3400 seconds.  Will retry at 2019-07-24 16:03:00.\n",
-      "Retries remaining = 5\n",
-      " system_id 17 of 829: 10156  Rate limit exceeded!  Waiting 3405 seconds.  Will retry at 2019-07-24 17:03:00.\n",
-      "Retries remaining = 5\n",
-      " system_id 19 of 829: 7313  Rate limit exceeded!  Waiting 3409 seconds.  Will retry at 2019-07-24 18:03:00.\n",
-      "Retries remaining = 5\n"
+      "[202 rows x 2 columns]\n",
+      "Number of missing dates found so far: 10413\n",
+      " system_id 245 of 829: 13764  Rate limit exceeded!  Waiting 885 seconds.  Will retry at 2019-08-03 19:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 247 of 829: 30495  Rate limit exceeded!  Waiting 3401 seconds.  Will retry at 2019-08-03 20:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 249 of 829: 9785  Rate limit exceeded!  Waiting 3399 seconds.  Will retry at 2019-08-03 21:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 250 of 829: 41956  Rate limit exceeded!  Waiting 3406 seconds.  Will retry at 2019-08-03 22:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 252 of 829: 7477  Rate limit exceeded!  Waiting 3403 seconds.  Will retry at 2019-08-03 23:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 254 of 829: 6106  Rate limit exceeded!  Waiting 3406 seconds.  Will retry at 2019-08-04 00:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 255 of 829: 10078  Rate limit exceeded!  Waiting 3407 seconds.  Will retry at 2019-08-04 01:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 257 of 829: 6870  Rate limit exceeded!  Waiting 3405 seconds.  Will retry at 2019-08-04 02:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 259 of 829: 14653  Rate limit exceeded!  Waiting 3404 seconds.  Will retry at 2019-08-04 03:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 260 of 829: 709  Rate limit exceeded!  Waiting 3406 seconds.  Will retry at 2019-08-04 04:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 262 of 829: 9647  Rate limit exceeded!  Waiting 3402 seconds.  Will retry at 2019-08-04 05:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 264 of 829: 20246  Rate limit exceeded!  Waiting 3401 seconds.  Will retry at 2019-08-04 06:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 265 of 829: 20146  Rate limit exceeded!  Waiting 3407 seconds.  Will retry at 2019-08-04 07:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 267 of 829: 30582  Rate limit exceeded!  Waiting 3400 seconds.  Will retry at 2019-08-04 08:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 269 of 829: 28164  Rate limit exceeded!  Waiting 3396 seconds.  Will retry at 2019-08-04 09:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 270 of 829: 10427  Rate limit exceeded!  Waiting 3397 seconds.  Will retry at 2019-08-04 10:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 272 of 829: 8690  Rate limit exceeded!  Waiting 3399 seconds.  Will retry at 2019-08-04 11:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 273 of 829: 21153  Rate limit exceeded!  Waiting 3407 seconds.  Will retry at 2019-08-04 12:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 275 of 829: 28805  Rate limit exceeded!  Waiting 3396 seconds.  Will retry at 2019-08-04 13:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 277 of 829: 6113  Rate limit exceeded!  Waiting 3400 seconds.  Will retry at 2019-08-04 14:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 278 of 829: 37225  Rate limit exceeded!  Waiting 3399 seconds.  Will retry at 2019-08-04 15:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 280 of 829: 8747  Rate limit exceeded!  Waiting 3403 seconds.  Will retry at 2019-08-04 16:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 282 of 829: 34183  Rate limit exceeded!  Waiting 3397 seconds.  Will retry at 2019-08-04 17:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 283 of 829: 22252  Rate limit exceeded!  Waiting 3402 seconds.  Will retry at 2019-08-04 18:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 285 of 829: 8561  Rate limit exceeded!  Waiting 3402 seconds.  Will retry at 2019-08-04 19:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 287 of 829: 32266  Rate limit exceeded!  Waiting 3395 seconds.  Will retry at 2019-08-04 20:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 288 of 829: 5876  Rate limit exceeded!  Waiting 3371 seconds.  Will retry at 2019-08-04 21:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 290 of 829: 4709  Rate limit exceeded!  Waiting 3391 seconds.  Will retry at 2019-08-04 22:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 292 of 829: 3586  Rate limit exceeded!  Waiting 3405 seconds.  Will retry at 2019-08-04 23:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 293 of 829: 28278  Rate limit exceeded!  Waiting 3399 seconds.  Will retry at 2019-08-05 00:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 295 of 829: 34279  Rate limit exceeded!  Waiting 3399 seconds.  Will retry at 2019-08-05 01:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 297 of 829: 33422  Rate limit exceeded!  Waiting 3404 seconds.  Will retry at 2019-08-05 02:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 298 of 829: 42795  Rate limit exceeded!  Waiting 3401 seconds.  Will retry at 2019-08-05 03:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 300 of 829: 53147  Rate limit exceeded!  Waiting 3399 seconds.  Will retry at 2019-08-05 04:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 301 of 829: 10312  Rate limit exceeded!  Waiting 3402 seconds.  Will retry at 2019-08-05 05:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 303 of 829: 7366  Rate limit exceeded!  Waiting 3403 seconds.  Will retry at 2019-08-05 06:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 305 of 829: 34000  Rate limit exceeded!  Waiting 3399 seconds.  Will retry at 2019-08-05 07:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 306 of 829: 5492  Rate limit exceeded!  Waiting 3408 seconds.  Will retry at 2019-08-05 08:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 308 of 829: 25797  Rate limit exceeded!  Waiting 3396 seconds.  Will retry at 2019-08-05 09:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 310 of 829: 4265  Rate limit exceeded!  Waiting 3403 seconds.  Will retry at 2019-08-05 10:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 311 of 829: 37543  Rate limit exceeded!  Waiting 3394 seconds.  Will retry at 2019-08-05 11:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 313 of 829: 14262  Rate limit exceeded!  Waiting 3390 seconds.  Will retry at 2019-08-05 12:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 315 of 829: 7505  Rate limit exceeded!  Waiting 3401 seconds.  Will retry at 2019-08-05 13:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 316 of 829: 4276  Rate limit exceeded!  Waiting 3406 seconds.  Will retry at 2019-08-05 14:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 318 of 829: 22677  Rate limit exceeded!  Waiting 3339 seconds.  Will retry at 2019-08-05 15:03:00.\n",
+      "Retries remaining = 150\n"
      ]
     }
    ],
@@ -1222,6 +1290,77 @@
     "                        store.append(key=str(system_id), value=timeseries)\n",
     "except:\n",
     "    logger.exception('Exception whilst processing system_id %d', system_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The exception that occured whilst we were on holiday, that I need to fix:\n",
+    "\n",
+    "```\n",
+    "2019-07-30 00:06:13,340 - pv_output - WARNING - Rate limit exceeded!  Waiting 3407 seconds.  Will retry at 2019-07-30 01:03:00.\n",
+    "Retries remaining = 150\n",
+    "2019-07-30 01:05:15,730 - pv_output - ERROR - Exception whilst processing system_id 10903\n",
+    "Traceback (most recent call last):\n",
+    "  File \"/home/jack/anaconda3/lib/python3.7/site-packages/urllib3/connection.py\", line 159, in _new_conn\n",
+    "    (self._dns_host, self.port), self.timeout, **extra_kw)\n",
+    "  File \"/home/jack/anaconda3/lib/python3.7/site-packages/urllib3/util/connection.py\", line 80, in create_connection\n",
+    "    raise err\n",
+    "  File \"/home/jack/anaconda3/lib/python3.7/site-packages/urllib3/util/connection.py\", line 70, in create_connection\n",
+    "    sock.connect(sa)\n",
+    "TimeoutError: [Errno 110] Connection timed out\n",
+    "\n",
+    "During handling of the above exception, another exception occurred:\n",
+    "\n",
+    "Traceback (most recent call last):\n",
+    "  File \"/home/jack/anaconda3/lib/python3.7/site-packages/urllib3/connectionpool.py\", line 600, in urlopen\n",
+    "    chunked=chunked)\n",
+    "  File \"/home/jack/anaconda3/lib/python3.7/site-packages/urllib3/connectionpool.py\", line 343, in _make_request\n",
+    "    self._validate_conn(conn)\n",
+    "  File \"/home/jack/anaconda3/lib/python3.7/site-packages/urllib3/connectionpool.py\", line 839, in _validate_conn\n",
+    "    conn.connect()\n",
+    "  File \"/home/jack/anaconda3/lib/python3.7/site-packages/urllib3/connection.py\", line 301, in connect\n",
+    "    conn = self._new_conn()\n",
+    "  File \"/home/jack/anaconda3/lib/python3.7/site-packages/urllib3/connection.py\", line 168, in _new_conn\n",
+    "    self, \"Failed to establish a new connection: %s\" % e)\n",
+    "urllib3.exceptions.NewConnectionError: <urllib3.connection.VerifiedHTTPSConnection object at 0x7fcef378bc18>: Failed to establish a new connection: [Errno 110] Connection timed out\n",
+    "\n",
+    "During handling of the above exception, another exception occurred:\n",
+    "\n",
+    "Traceback (most recent call last):\n",
+    "  File \"/home/jack/anaconda3/lib/python3.7/site-packages/requests/adapters.py\", line 449, in send\n",
+    "    timeout=timeout\n",
+    "  File \"/home/jack/anaconda3/lib/python3.7/site-packages/urllib3/connectionpool.py\", line 638, in urlopen\n",
+    "    _stacktrace=sys.exc_info()[2])\n",
+    "  File \"/home/jack/anaconda3/lib/python3.7/site-packages/urllib3/util/retry.py\", line 398, in increment\n",
+    "    raise MaxRetryError(_pool, url, error or ResponseError(cause))\n",
+    "urllib3.exceptions.MaxRetryError: HTTPSConnectionPool(host='pvoutput.org', port=443): Max retries exceeded with url: /service/r2/getstatus.jsp?d=20190224&h=1&limit=86400&ext=0&sid1=10903 (Caused by NewConnectionError('<urllib3.connection.VerifiedHTTPSConnection object at 0x7fcef378bc18>: Failed to establish a new connection: [Errno 110] Connection timed out'))\n",
+    "\n",
+    "During handling of the above exception, another exception occurred:\n",
+    "\n",
+    "Traceback (most recent call last):\n",
+    "  File \"<ipython-input-12-fdf34b8dd12d>\", line 73, in <module>\n",
+    "    timeseries = get_pv_system_status(system_id, date)\n",
+    "  File \"/home/jack/dev/python/openclimatefix/solar/pvoutput/pvoutput.py\", line 200, in get_pv_system_status\n",
+    "    }, **kwargs)\n",
+    "  File \"/home/jack/dev/python/openclimatefix/solar/pvoutput/pvoutput.py\", line 125, in pv_output_api_query\n",
+    "    return pv_output_api_query(service, api_params, retries=retries-1)\n",
+    "  File \"/home/jack/dev/python/openclimatefix/solar/pvoutput/pvoutput.py\", line 88, in pv_output_api_query\n",
+    "    response = requests.get(api_url, headers=headers)\n",
+    "  File \"/home/jack/anaconda3/lib/python3.7/site-packages/requests/api.py\", line 75, in get\n",
+    "    return request('get', url, params=params, **kwargs)\n",
+    "  File \"/home/jack/anaconda3/lib/python3.7/site-packages/requests/api.py\", line 60, in request\n",
+    "    return session.request(method=method, url=url, **kwargs)\n",
+    "  File \"/home/jack/anaconda3/lib/python3.7/site-packages/requests/sessions.py\", line 533, in request\n",
+    "    resp = self.send(prep, **send_kwargs)\n",
+    "  File \"/home/jack/anaconda3/lib/python3.7/site-packages/requests/sessions.py\", line 646, in send\n",
+    "    r = adapter.send(request, **kwargs)\n",
+    "  File \"/home/jack/anaconda3/lib/python3.7/site-packages/requests/adapters.py\", line 516, in send\n",
+    "    raise ConnectionError(e, request=request)\n",
+    "requests.exceptions.ConnectionError: HTTPSConnectionPool(host='pvoutput.org', port=443): Max retries exceeded with url: /service/r2/getstatus.jsp?d=20190224&h=1&limit=86400&ext=0&sid1=10903 (Caused by NewConnectionError('<urllib3.connection.VerifiedHTTPSConnection object at 0x7fcef378bc18>: Failed to establish a new connection: [Errno 110] Connection timed out'))\n",
+    "```\n",
+    "\n"
    ]
   },
   {
