--- a/download_pv_timeseries.ipynb
+++ b/download_pv_timeseries.ipynb
@@ -1117,16 +1117,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of missing dates found so far: 12754\n",
+      "Number of missing dates found so far: 12935\n",
       "Number of duplicate missing dates: 33\n",
-      " system_id 5531: 352 of 829 (42%) "
+      " system_id 27032: 353 of 829 (43%) Rate limit exceeded!  Waiting 2359 seconds.  Will retry at 2019-08-06 18:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 15709: 355 of 829 (43%) Rate limit exceeded!  Waiting 3390 seconds.  Will retry at 2019-08-06 19:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 30951: 356 of 829 (43%) Rate limit exceeded!  Waiting 3353 seconds.  Will retry at 2019-08-06 20:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 26558: 358 of 829 (43%) Rate limit exceeded!  Waiting 3394 seconds.  Will retry at 2019-08-06 21:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 47486: 360 of 829 (43%) Rate limit exceeded!  Waiting 3392 seconds.  Will retry at 2019-08-06 22:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 2221: 361 of 829 (44%) Rate limit exceeded!  Waiting 3399 seconds.  Will retry at 2019-08-06 23:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 32012: 363 of 829 (44%) Rate limit exceeded!  Waiting 3397 seconds.  Will retry at 2019-08-07 00:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 5877: 365 of 829 (44%) Rate limit exceeded!  Waiting 3378 seconds.  Will retry at 2019-08-07 01:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 38754: 366 of 829 (44%) Rate limit exceeded!  Waiting 3400 seconds.  Will retry at 2019-08-07 02:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 51657: 368 of 829 (44%) Rate limit exceeded!  Waiting 3399 seconds.  Will retry at 2019-08-07 03:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 27124: 370 of 829 (45%) Rate limit exceeded!  Waiting 3397 seconds.  Will retry at 2019-08-07 04:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 8840: 371 of 829 (45%) Rate limit exceeded!  Waiting 3403 seconds.  Will retry at 2019-08-07 05:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 38924: 373 of 829 (45%) Rate limit exceeded!  Waiting 3394 seconds.  Will retry at 2019-08-07 06:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 2017: 375 of 829 (45%) Rate limit exceeded!  Waiting 3399 seconds.  Will retry at 2019-08-07 07:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 6908: 376 of 829 (45%) Rate limit exceeded!  Waiting 3403 seconds.  Will retry at 2019-08-07 08:03:00.\n",
+      "Retries remaining = 150\n",
+      " system_id 21990: 377 of 829 (45%) "
      ]
     }
    ],
