piping Request's logger into pvoutput's logger

--- a/download_pv_timeseries.ipynb
+++ b/download_pv_timeseries.ipynb
@@ -1119,7 +1119,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of missing dates found so far: 13857\n",
+      "Number of duplicate missing dates: 33\n",
+      " system_id 38783: 0 of 829 (0%) "
+     ]
+    }
+   ],
    "source": [
     "logger.info('\\n******* STARTING UP ************')\n",
     "\n",
@@ -1145,7 +1155,7 @@
     "try:\n",
     "    n = len(pv_systems_filtered)\n",
     "    api_request_i = 0\n",
-    "    for i, system_id in enumerate(pv_systems_filtered.index):\n",
+    "    for i, system_id in enumerate(pv_systems_filtered.index[378:]):  # TODO: REMOVE START POINT!!!\n",
     "        msg = 'system_id {:d}: {:d} of {:d} ({:.0%}) '.format(system_id, i, n, i/n)\n",
     "        print('\\r', msg, end='', flush=True)\n",
     "        logger.info('****************************')\n",
