--- a/download_pv_timeseries.ipynb
+++ b/download_pv_timeseries.ipynb
@@ -1126,7 +1126,7 @@
      "text": [
       "Number of missing dates found so far: 13857\n",
       "Number of duplicate missing dates: 33\n",
-      " system_id 38783: 0 of 829 (0%) "
+      " system_id 17559: 2 of 829 (0%) "
      ]
     }
    ],
@@ -1155,7 +1155,7 @@
     "try:\n",
     "    n = len(pv_systems_filtered)\n",
     "    api_request_i = 0\n",
-    "    for i, system_id in enumerate(pv_systems_filtered.index[378:]):  # TODO: REMOVE START POINT!!!\n",
+    "    for i, system_id in enumerate(pv_systems_filtered.index):\n",
     "        msg = 'system_id {:d}: {:d} of {:d} ({:.0%}) '.format(system_id, i, n, i/n)\n",
     "        print('\\r', msg, end='', flush=True)\n",
     "        logger.info('****************************')\n",
