Started tidying up the notebooks

--- a/examples/quick_start.ipynb
+++ b/examples/quick_start.ipynb
@@ -26,6 +26,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Search\n",
+    "\n",
+    "Search for PV systems within 5km of a point in the UK.\n",
+    "\n",
+    "See [the PVOutput.org API docs for details of how to search](https://pvoutput.org/help.html#search)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -100,7 +111,7 @@
        "      <td>United Kingdom OX16</td>\n",
        "      <td>S</td>\n",
        "      <td>356</td>\n",
-       "      <td>Today</td>\n",
+       "      <td>Yesterday</td>\n",
        "      <td>SunPower</td>\n",
        "      <td>SolarEdge 5K HD</td>\n",
        "      <td>1.0</td>\n",
@@ -142,7 +153,7 @@
        "      <td>United Kingdom OX16</td>\n",
        "      <td>S</td>\n",
        "      <td>1485</td>\n",
-       "      <td>Today</td>\n",
+       "      <td>Yesterday</td>\n",
        "      <td>LG LG300 N1C-B3 LG</td>\n",
        "      <td>Enphase m250</td>\n",
        "      <td>1.0</td>\n",
@@ -165,10 +176,10 @@
        "          orientation  num_outputs    last_output  \\\n",
        "system_id                                           \n",
        "68309              SE            0     No Outputs   \n",
-       "61190               S          356          Today   \n",
+       "61190               S          356      Yesterday   \n",
        "7191               SE            1  384 weeks ago   \n",
        "62751               S           83   29 weeks ago   \n",
-       "38924               S         1485          Today   \n",
+       "38924               S         1485      Yesterday   \n",
        "\n",
        "                                  panel          inverter  distance_km  \\\n",
        "system_id                                                                \n",
@@ -193,9 +204,15 @@
     }
    ],
    "source": [
-    "# Search for PV systems with 5km of a point in the UK\n",
     "pv_systems = pv.search(query='5km', lat=52.0668589, lon=-1.3484038)\n",
     "pv_systems.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check how many API requests we have left this hour"
    ]
   },
   {
@@ -206,9 +223,9 @@
     {
      "data": {
       "text/plain": [
-       "{'rate_limit_remaining': 290,\n",
+       "{'rate_limit_remaining': 299,\n",
        " 'rate_limit_total': 300,\n",
-       " 'rate_limit_reset_time': Timestamp('2019-08-09 14:00:00+0000', tz='UTC')}"
+       " 'rate_limit_reset_time': Timestamp('2019-08-09 15:00:00+0000', tz='UTC')}"
       ]
      },
      "execution_count": 4,
@@ -217,8 +234,14 @@
     }
    ],
    "source": [
-    "# Check how many API requests we have left this hour.\n",
     "pv.rate_limit_info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get rid of systems with < 50 outputs"
    ]
   },
   {
@@ -282,7 +305,7 @@
        "      <td>United Kingdom OX16</td>\n",
        "      <td>S</td>\n",
        "      <td>356</td>\n",
-       "      <td>Today</td>\n",
+       "      <td>Yesterday</td>\n",
        "      <td>SunPower</td>\n",
        "      <td>SolarEdge 5K HD</td>\n",
        "      <td>1.0</td>\n",
@@ -310,7 +333,7 @@
        "      <td>United Kingdom OX16</td>\n",
        "      <td>S</td>\n",
        "      <td>1485</td>\n",
-       "      <td>Today</td>\n",
+       "      <td>Yesterday</td>\n",
        "      <td>LG LG300 N1C-B3 LG</td>\n",
        "      <td>Enphase m250</td>\n",
        "      <td>1.0</td>\n",
@@ -360,9 +383,9 @@
        "\n",
        "          orientation  num_outputs    last_output               panel  \\\n",
        "system_id                                                               \n",
-       "61190               S          356          Today            SunPower   \n",
+       "61190               S          356      Yesterday            SunPower   \n",
        "62751               S           83   29 weeks ago            Sunpower   \n",
-       "38924               S         1485          Today  LG LG300 N1C-B3 LG   \n",
+       "38924               S         1485      Yesterday  LG LG300 N1C-B3 LG   \n",
        "23236              SE          691  208 weeks ago           Renesolar   \n",
        "40100               S           62  187 weeks ago       Caymax SSE195   \n",
        "\n",
@@ -381,9 +404,15 @@
     }
    ],
    "source": [
-    "# Get rid of systems with <= 50 outputs\n",
-    "pv_systems = pv_systems.query('num_outputs > 50')\n",
+    "pv_systems = pv_systems.query('num_outputs >= 50')\n",
     "pv_systems.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get metadata for one PV system"
    ]
   },
   {
@@ -424,10 +453,16 @@
     }
    ],
    "source": [
-    "# Get metadata\n",
     "pv_system_id = pv_systems.index[0]\n",
     "metadata = pv.get_metadata(pv_system_id)\n",
     "metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get power generation statistics for on PV system"
    ]
   },
   {
@@ -438,9 +473,9 @@
     {
      "data": {
       "text/plain": [
-       "energy_generated_Wh                          5266356\n",
+       "energy_generated_Wh                          5267341\n",
        "energy_exported_Wh                                 0\n",
-       "average_generation_Wh                          14793\n",
+       "average_generation_Wh                          14795\n",
        "minimum_generation_Wh                            472\n",
        "maximum_generation_Wh                          34430\n",
        "average_efficiency_kWh_per_kW                  2.642\n",
@@ -460,6 +495,15 @@
    ],
    "source": [
     "pv.get_statistic(pv_system_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get timeseries of power data for one day\n",
+    "\n",
+    "In one API request, PVOutput.org allows us to retrieve timeseries data for one day and one PV system."
    ]
   },
   {
@@ -637,9 +681,17 @@
     "status = pv.get_status(pv_system_id, date=DATE)\n",
     "\n",
     "# The timestamps are localtime, local to the PV system\n",
+    "# and we know this PV system is from the United Kingdom.\n",
     "status = status.tz_localize('Europe/London')\n",
     "\n",
     "status.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot timeseries"
    ]
   },
   {
@@ -674,6 +726,13 @@
     "\n",
     "ax.legend();"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
