Fix typos & shift Travis from pvoutput_downloader to pvoutput

--- a/examples/quick_start.ipynb
+++ b/examples/quick_start.ipynb
@@ -462,7 +462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get power generation statistics for on PV system"
+    "## Get power generation statistics for one PV system"
    ]
   },
   {
